--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -1,2 +1,4 @@
 <!-- The future home for the Home.html. Coming soon... --> 
 <!-- Testing a new branch and adding a comment --> 
+<!-- Testing a new branch -->
+
