Redeveloped home.html for more expressive front-end
Restyled cards in home.html, and separated css styles into more organized files.

--- a/HTML/About.html
+++ b/HTML/About.html
@@ -1,5 +1,3 @@
-<!-- The future home for the Home.html. Coming soon... --> 
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -20,15 +18,9 @@
         
         <link href="https://fonts.googleapis.com/css?family=Prata&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-<!--
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Archivo:500|Open+Sans:300,700" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Archivo&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet">        
--->
 
-        <!--        <link href="../CSS/reset.css" rel="stylesheet">-->
-        <link href="../CSS/site.css" rel="stylesheet">
+        <link href="../CSS/general.css" rel="stylesheet">
+        <link href="../CSS/about.css" rel="stylesheet">
         <script type="text/javascript" src="../JavaScript/script.js"></script>
         
     </head>
